--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+ima-evm-utils (1.4-1.2+grm4u1) unstable; urgency=medium
+
+  [ jongkyung.woo ]
+  * [5b19fbfa] Rebased on gooroom-4.0
+
+ -- Gooroom Autobuilder <jenkins@gooroom.kr>  Mon, 11 Mar 2024 20:19:24 +0900
+
 ima-evm-utils (1.4-1.2) unstable; urgency=high
 
   * Non-maintainer upload.
